camera snapshots added

--- a/Lijsterhof/src/app/Views/page13.component.html
+++ b/Lijsterhof/src/app/Views/page13.component.html
@@ -1,3 +1,4 @@
 <div>
-    <video id="video" src="http://192.168.0.153:8081" autoplay="autoplay"></video>
+    <img src="http://192.168.0.153/camera1.jpg" alt="Camera 1">
+   <!-- <video id="video" src="http://192.168.0.153:8081" autoplay="autoplay"></video>-->
 </div>
