--- a/Lijsterhof/src/app/Views/page13.component.html
+++ b/Lijsterhof/src/app/Views/page13.component.html
@@ -1,4 +1,4 @@
 <div>
-    <img src="http://192.168.0.153/camera1.jpg" alt="Camera 1">
+    <iframe src="http://192.168.0.153:8081/" frameborder="1" scrolling="no" height="720" width="1280"></iframe>
    <!-- <video id="video" src="http://192.168.0.153:8081" autoplay="autoplay"></video>-->
 </div>
