--- a/Lijsterhof/src/app/Views/page14.component.html
+++ b/Lijsterhof/src/app/Views/page14.component.html
@@ -1,3 +1,5 @@
 <div>
-    <img src="http://192.168.0.155/camera2.jpg" alt="Camera 2">
+        <iframe src="http://192.168.0.155:8081/" frameborder="1" scrolling="no" height="200" width="320"></iframe>
+   <!-- <video id="video" src="http://192.168.0.153:8081" autoplay="autoplay"></video>-->
+
 </div>
