--- a/Lijsterhof/src/app/Views/page02.component.html
+++ b/Lijsterhof/src/app/Views/page02.component.html
@@ -36,4 +36,18 @@
         </tr>
      </table>
 
+     <div style="overflow: hidden;height : 100%" >
+     <kendo-chart style="overflow: hidden; height : 100%">
+            <kendo-chart-legend position="bottom" orientation="horizontal" ></kendo-chart-legend>
+            <kendo-chart-series>
+                <kendo-chart-series-item *ngFor="let serie of stookLijnen"
+               type="line"  [data]="serie.getData()" [name]="serie.name">
+                </kendo-chart-series-item>
+            </kendo-chart-series>
+        </kendo-chart>
+    <!--  <div *ngFor="let item of tempGraph">
+        <input type="checkbox" [(ngModel)]="item.visible">{{item.name}}<br>
+    </div>--> 
+    </div>
+
 </div>
