--- a/Lijsterhof/src/app/Views/page02.component.html
+++ b/Lijsterhof/src/app/Views/page02.component.html
@@ -117,4 +117,91 @@
                     </td></tr>
     </table>
 
+
+    <table style="margin: 0px auto; ">
+            <tr>
+                <th></th>
+                <th>Mazout</th>
+                <th>Hout</th>
+            </tr>
+
+            <tr>
+                <td>
+                    Bruno & Sandy - Verwarming
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[0]"></app-parameter-display>
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[1]"></app-parameter-display>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bruno & Sandy - Warm water
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[2]"></app-parameter-display>
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[3]"></app-parameter-display>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Tommy - Verwarming
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[4]"></app-parameter-display>
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[5]"></app-parameter-display>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Tommy - Warm water
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[6]"></app-parameter-display>
+                </td>
+                <td>
+                    <app-parameter-display [exportParameter]="settingList[7]"></app-parameter-display>
+                </td>
+            </tr>
+        </table>
+
+
+        <table style="margin: 0px auto; ">
+                <tr>
+                    <th>Buitentemp</th>
+                    <th>Watertemp</th>
+                </tr>
+                <tr>
+                    <td>
+                        <app-parameter-display [exportParameter]="tempSettingList[0]"></app-parameter-display>
+                    </td>
+                
+                    <td>
+                        <app-parameter-display [exportParameter]="tempSettingList[1]"></app-parameter-display>
+                    </td>
+                </tr>
+    
+                <tr>
+                    <td>
+                        <app-parameter-display [exportParameter]="tempSettingList[2]"></app-parameter-display>
+                    </td>
+                    <td>
+                        <app-parameter-display [exportParameter]="tempSettingList[3]"></app-parameter-display>
+                    </td>
+                </tr>
+    
+            </table>
+      
+
+
+
+
 </div>
