--- a/Lijsterhof/src/app/Views/page15.component.html
+++ b/Lijsterhof/src/app/Views/page15.component.html
@@ -83,5 +83,43 @@
 </tr>
 
 </table>
-     
+
+
+<ul style="list-style-type: none;" class="tempTable">
+ <li *ngFor="let parameter of tempList">
+        <app-parameter-display [exportParameter]="parameter"></app-parameter-display>
+
+ </li>
+</ul>
+    
+
+<table style="margin: 0px auto; ">
+    <tr>
+        <th></th>
+        <th>Min</th>
+        <th>Max</th>
+    </tr>
+    <tr>
+            <td>Hout</td>
+        <td>
+            <app-parameter-display [exportParameter]="setupList[0]"></app-parameter-display>
+        </td>
+    
+        <td>
+            <app-parameter-display [exportParameter]="setupList[1]"></app-parameter-display>
+        </td>
+    </tr>
+
+    <tr>
+            <td>Mazout</td>
+        <td>
+            <app-parameter-display [exportParameter]="setupList[2]"></app-parameter-display>
+        </td>
+        <td>
+            <app-parameter-display [exportParameter]="setupList[3]"></app-parameter-display>
+        </td>
+    </tr>
+
+</table>
+
 
